finished danish timeline

--- a/danish.html
+++ b/danish.html
@@ -45,6 +45,20 @@
           </li>
           <li>
             <p class="historicalParagraph">
+              <a href="https://en.wikipedia.org/wiki/Battle_of_Hingston_Down"
+                >The battle of hingston down
+              </a>
+            </p>
+            <h2>838 A.C</h2>
+            <img
+              src="images/viking.jpg"
+              alt="Second year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
               <a
                 href="https://www.historyextra.com/period/viking/key-viking-dates-lindisfarne-raid-danelaw-swein-forkbeard-harald-hardrada-stamford-bridge/"
                 >The great heathen army raids in England. This is the first raid
@@ -86,8 +100,41 @@
             />
           </li>
           <li>
-            <p class="historicalParagraph">Some text about the history</p>
-            <h2>Fith date</h2>
+            <p class="historicalParagraph">
+              <a href="https://www.britannica.com/topic/Battle-of-Edington"
+                >The battle of Edington</a
+              >
+            </p>
+            <h2>878 A.C</h2>
+            <img
+              src="images/viking.jpg"
+              alt="Fith year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
+              <a
+                href="https://www.historic-uk.com/HistoryUK/HistoryofBritain/Battle-of-Brunanburh/"
+                >The battle of Brunanburh</a
+              >
+            </p>
+            <h2>937 A.C</h2>
+            <img
+              src="images/viking.jpg"
+              alt="Fith year image"
+              width="200px"
+              height="150px"
+            />
+          </li>
+          <li>
+            <p class="historicalParagraph">
+              <a href="https://en.wikipedia.org/wiki/Battle_of_the_Holme"
+                >The battle of Holme</a
+              >
+            </p>
+            <h2>937 A.C</h2>
             <img
               src="images/viking.jpg"
               alt="Fith year image"
