moved the <h1> from the <header> to the <main>

--- a/mainPage.html
+++ b/mainPage.html
@@ -21,9 +21,9 @@
           <li><a href="danish.html">Denmark</a></li>
         </ul>
       </nav>
-      <h1>Vikings: An Historical Review</h1>
     </header>
     <main>
+      <h1><span id="h1Top">Vikings:</span> An Historical Review</h1>
       <p id="intro_text">
         Today we refer to Viking Age Scandinavians generally as Vikings as
         though they were one group. But the people known as Vikings weren’t an
@@ -33,13 +33,6 @@
         didn’t really go Viking like their counterparts eastward did, they also
         developed a more settled society.
       </p>
-      <article>
-        <h2>Put the h2 here</h2>
-        <p>Put a paragraph about the page here</p>
-        <aside>
-          <p>Less important information here</p>
-        </aside>
-      </article>
     </main>
     <footer>
       <a href="#">about us</a>
