--- a/swedish.html
+++ b/swedish.html
@@ -31,24 +31,27 @@
     <main>
       <h1>Swedish Viking Culture</h1>
       <article>
-        <p id="intro_text">
-          In the time of the Viking Age Sweden was fragmented into many petty
-          kingdoms (also known as earldoms) ruled each by a local chieftain,
-          although, according to semi-legendary history, there might have been
-          renowned monarchs who ruled parts of the realms of what is now Sweden
-          (along with Denmark and Norway) such as Ragnar Lothbrok or Bjorn
-          Ironside (both allegedly belonging to the Royal House of Munso) at
-          certain times. The Swedes, then known as Varangians, or Rus. They are
-          very interesting because out of the three they were the ones who
-          stayed true to their pagan ways for the longest. They were poised to
-          discover and pillage new lands in the east along the Volga and Dnieper
-          rivers. Their expeditions, however, were of a different sort than the
-          Danes and Norwegians in the west. They were excellent explorers and
-          tradesmen, but simply not as violent as the others (in relative terms,
-          of course they terrorized many primitives along the Baltic) The goal
-          of the Rus was primarily to trade (or so we think). They established
-          long trade routes to the middle east and around the Black Sea.
-        </p>
+        <span id="sweedishIntro"
+          ><p id="intro_text">
+            In the time of the Viking Age Sweden was fragmented into many petty
+            kingdoms (also known as earldoms) ruled each by a local chieftain,
+            although, according to semi-legendary history, there might have been
+            renowned monarchs who ruled parts of the realms of what is now
+            Sweden (along with Denmark and Norway) such as Ragnar Lothbrok or
+            Bjorn Ironside (both allegedly belonging to the Royal House of
+            Munso) at certain times. The Swedes, then known as Varangians, or
+            Rus. They are very interesting because out of the three they were
+            the ones who stayed true to their pagan ways for the longest. They
+            were poised to discover and pillage new lands in the east along the
+            Volga and Dnieper rivers. Their expeditions, however, were of a
+            different sort than the Danes and Norwegians in the west. They were
+            excellent explorers and tradesmen, but simply not as violent as the
+            others (in relative terms, of course they terrorized many primitives
+            along the Baltic) The goal of the Rus was primarily to trade (or so
+            we think). They established long trade routes to the middle east and
+            around the Black Sea.
+          </p></span
+        >
         <ul>
           <li>
             <p class="historicalParagraph">
