added footer for all pages

--- a/mainPage.html
+++ b/mainPage.html
@@ -35,7 +35,7 @@
       </p>
     </main>
     <footer>
-      <a href="#">about us</a>
+      <a href="#">About us</a>
     </footer>
   </body>
 </html>
