--- a/swedish.html
+++ b/swedish.html
@@ -148,9 +148,7 @@
       </aside>
     </main>
     <footer>
-      <p>
-        <a href="#">about us</a>
-      </p>
+      <a href="#">About us</a>
     </footer>
   </body>
 </html>
