--- a/danish.html
+++ b/danish.html
@@ -151,9 +151,7 @@
       </aside>
     </main>
     <footer>
-      <p>
-        <a href="#">about us</a>
-      </p>
+      <a href="#">About us</a>
     </footer>
   </body>
 </html>
