--- a/mainPage.html
+++ b/mainPage.html
@@ -19,6 +19,7 @@
           <li><a href="norwegian.html">Norway</a></li>
           <li><a href="swedish.html">Sweeden</a></li>
           <li><a href="danish.html">Denmark</a></li>
+          <li><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
       <h1>Vikings: An Historical Review</h1>
