--- a/swedish.html
+++ b/swedish.html
@@ -22,10 +22,11 @@
     <header>
       <nav>
         <ul id="navId">
-          <li><a href="mainPage.html">Home</a></li>
-          <li><a href="norwegian.html">Norway</a></li>
-          <li><a href="swedish.html">Sweeden</a></li>
-          <li><a href="danish.html">Denmark</a></li>
+            <li><a href="mainPage.html">Home</a></li>
+            <li><a href="norwegian.html">Norway</a></li>
+            <li><a href="swedish.html">Sweeden</a></li>
+            <li><a href="danish.html">Denmark</a></li>
+            <li><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
       <h1>Swedish Viking Culture</h1>
