--- a/danish.html
+++ b/danish.html
@@ -21,6 +21,7 @@
           <li><a href="norwegian.html">Norway</a></li>
           <li><a href="swedish.html">Sweeden</a></li>
           <li><a href="danish.html">Denmark</a></li>
+          <li><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
       <h1>Danish Viking Culture</h1>
