--- a/swedish.html
+++ b/swedish.html
@@ -21,11 +21,18 @@
     <header>
       <nav>
         <ul id="navId">
-            <li><a href="mainPage.html">Home</a></li>
-            <li><a href="about_us.html">About us</a></li>
-            <li><a href="norwegian.html">Norway</a></li>
-            <li><a href="swedish.html">Sweeden</a></li>
-            <li><a href="danish.html">Denmark</a></li>
+          <li><a href="mainPage.html">Home</a></li>
+          <li id="unicodeLi">
+            <details>
+              <summary>&#9776; Countries</summary>
+              <ul>
+                <li class="countries"><a href="norwegian.html">Norway</a></li>
+                <li class="countries"><a href="swedish.html">Sweeden</a></li>
+                <li class="countries"><a href="danish.html">Denmark</a></li>
+              </ul>
+            </details>
+          </li>
+          <li id="aboutUs"><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
     </header>
