--- a/danish.html
+++ b/danish.html
@@ -1,3 +1,6 @@
+<!--
+    This part was made for Paal Kobbeltvedt
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,10 +21,17 @@
       <nav>
         <ul id="navId">
           <li><a href="mainPage.html">Home</a></li>
-          <li><a href="about_us.html">About us</a></li>
-          <li><a href="norwegian.html">Norway</a></li>
-          <li><a href="swedish.html">Sweeden</a></li>
-          <li><a href="danish.html">Denmark</a></li>
+          <li id="unicodeLi">
+            <details>
+              <summary>&#9776; Countries</summary>
+              <ul>
+                <li class="countries"><a href="norwegian.html">Norway</a></li>
+                <li class="countries"><a href="swedish.html">Sweeden</a></li>
+                <li class="countries"><a href="danish.html">Denmark</a></li>
+              </ul>
+            </details>
+          </li>
+          <li id="aboutUs"><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
     </header>
