fixed responsivity in 'about ut', also copied the 'about_us' css to the 'style.css'

--- a/about_us.html
+++ b/about_us.html
@@ -9,7 +9,7 @@
     <meta name="keyworkds" content="swedish, vikings, culture, history" />
     <meta name="author" content="Dikult105 group" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/about_us.css" title="v1" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
     <title>
       About us
     </title>
@@ -42,6 +42,7 @@
         <ul id="pics_email">
           <li>
             <img
+              class="contactImage"
               src="images/viking.jpg"
               width="350px"
               height="300px"
@@ -54,6 +55,7 @@
           </li>
           <li>
             <img
+              class="contactImage"
               src="images/viking.jpg"
               width="350px"
               height="300px"
@@ -66,6 +68,7 @@
           </li>
           <li>
             <img
+              class="contactImage"
               src="images/viking.jpg"
               width="350px"
               height="300px"
@@ -82,9 +85,7 @@
       </article>
       <article>
         <form>
-          <h2>
-            Contact
-          </h2>
+          <h2>Contact</h2>
           <input type="text" placeholder="Name" class="label_title" />
           <input type="email" placeholder="Email" class="label_title" />
           <textarea
