added photos for denmark

--- a/danish.html
+++ b/danish.html
@@ -48,8 +48,8 @@
             </p>
             <h2>800 A.C</h2>
             <img
-              src="images/viking.jpg"
-              alt="first year image"
+              src="images/denmark/vikings-disembarking.jpg"
+              alt="drawing of wikings disembarking"
               width="200px"
               height="150px"
             />
@@ -57,13 +57,13 @@
           <li>
             <p class="historicalParagraph">
               <a href="https://en.wikipedia.org/wiki/Battle_of_Hingston_Down"
-                >The battle of hingston down
+                >The battle of hingston down was fought
               </a>
             </p>
             <h2>838 A.C</h2>
             <img
-              src="images/viking.jpg"
-              alt="Second year image"
+              src="images/denmark/Southern_British_Isles.png"
+              alt="Image of the southern british isles"
               width="200px"
               height="150px"
             />
@@ -79,19 +79,22 @@
             </p>
             <h2>865 A.C</h2>
             <img
-              src="images/viking.jpg"
-              alt="Second year image"
+              src="images/denmark/viking-raid_large.webp"
+              alt="Image of a viking artifact"
               width="200px"
               height="150px"
             />
           </li>
           <li>
             <p class="historicalParagraph">
-              Viking forces from the great heathen forces conquerers York
+              <a
+                href="https://www.historyextra.com/period/viking/key-viking-dates-lindisfarne-raid-danelaw-swein-forkbeard-harald-hardrada-stamford-bridge/"
+                >Viking forces from the great heathen forces conquerers York
+              </a>
             </p>
             <h2>866 A.C</h2>
             <img
-              src="images/viking.jpg"
+              src="images/denmark/viking_ship.jpg"
               alt="Third year image"
               width="200px"
               height="150px"
@@ -104,7 +107,7 @@
             </p>
             <h2>870 A.C</h2>
             <img
-              src="images/viking.jpg"
+              src="images/denmark/vikings_heading_for_land.jpg"
               alt="Fourh year image"
               width="200px"
               height="150px"
@@ -113,12 +116,12 @@
           <li>
             <p class="historicalParagraph">
               <a href="https://www.britannica.com/topic/Battle-of-Edington"
-                >The battle of Edington</a
+                >The battle of Edington was fought</a
               >
             </p>
             <h2>878 A.C</h2>
             <img
-              src="images/viking.jpg"
+              src="images/denmark/viking_ship_2.jpg"
               alt="Fith year image"
               width="200px"
               height="150px"
@@ -128,12 +131,12 @@
             <p class="historicalParagraph">
               <a
                 href="https://www.historic-uk.com/HistoryUK/HistoryofBritain/Battle-of-Brunanburh/"
-                >The battle of Brunanburh</a
+                >The battle of Brunanburh was fought</a
               >
             </p>
             <h2>937 A.C</h2>
             <img
-              src="images/viking.jpg"
+              src="images/denmark/viking_battle.jpg"
               alt="Fith year image"
               width="200px"
               height="150px"
@@ -142,12 +145,12 @@
           <li>
             <p class="historicalParagraph">
               <a href="https://en.wikipedia.org/wiki/Battle_of_the_Holme"
-                >The battle of Holme</a
+                >The battle of Holme was fought</a
               >
             </p>
             <h2>937 A.C</h2>
             <img
-              src="images/viking.jpg"
+              src="images/denmark/viking_ship_3.jpg"
               alt="Fith year image"
               width="200px"
               height="150px"
@@ -155,14 +158,6 @@
           </li>
         </ul>
       </article>
-      <aside>
-        <p>
-          Some content less important.
-        </p>
-      </aside>
     </main>
-    <footer>
-      <a href="#">About us</a>
-    </footer>
   </body>
 </html>
