removed width and height for images from html, added it in css

--- a/danish.html
+++ b/danish.html
@@ -50,8 +50,6 @@
             <img
               src="images/denmark/vikings-disembarking.jpg"
               alt="drawing of wikings disembarking"
-              width="200px"
-              height="150px"
             />
           </li>
           <li>
@@ -64,8 +62,6 @@
             <img
               src="images/denmark/Southern_British_Isles.png"
               alt="Image of the southern british isles"
-              width="200px"
-              height="150px"
             />
           </li>
           <li>
@@ -81,8 +77,6 @@
             <img
               src="images/denmark/viking-raid_large.webp"
               alt="Image of a viking artifact"
-              width="200px"
-              height="150px"
             />
           </li>
           <li>
@@ -93,12 +87,7 @@
               </a>
             </p>
             <h2>866 A.C</h2>
-            <img
-              src="images/denmark/viking_ship.jpg"
-              alt="Third year image"
-              width="200px"
-              height="150px"
-            />
+            <img src="images/denmark/viking_ship.jpg" alt="Third year image" />
           </li>
           <li>
             <p class="historicalParagraph">
@@ -109,8 +98,6 @@
             <img
               src="images/denmark/vikings_heading_for_land.jpg"
               alt="Fourh year image"
-              width="200px"
-              height="150px"
             />
           </li>
           <li>
@@ -120,12 +107,7 @@
               >
             </p>
             <h2>878 A.C</h2>
-            <img
-              src="images/denmark/viking_ship_2.jpg"
-              alt="Fith year image"
-              width="200px"
-              height="150px"
-            />
+            <img src="images/denmark/viking_ship_2.jpg" alt="Fith year image" />
           </li>
           <li>
             <p class="historicalParagraph">
@@ -135,12 +117,7 @@
               >
             </p>
             <h2>937 A.C</h2>
-            <img
-              src="images/denmark/viking_battle.jpg"
-              alt="Fith year image"
-              width="200px"
-              height="150px"
-            />
+            <img src="images/denmark/viking_battle.jpg" alt="Fith year image" />
           </li>
           <li>
             <p class="historicalParagraph">
@@ -149,12 +126,7 @@
               >
             </p>
             <h2>937 A.C</h2>
-            <img
-              src="images/denmark/viking_ship_3.jpg"
-              alt="Fith year image"
-              width="200px"
-              height="150px"
-            />
+            <img src="images/denmark/viking_ship_3.jpg" alt="Fith year image" />
           </li>
         </ul>
       </article>
