made last changes for paal

--- a/danish.html
+++ b/danish.html
@@ -1,5 +1,5 @@
 <!--
-    This part was made for Paal Kobbeltvedt
+    This part was made by candidate number 124
 -->
 <!DOCTYPE html>
 <html lang="en">
