added updated chris things

--- a/about_us.html
+++ b/about_us.html
@@ -9,7 +9,7 @@
     <meta name="keyworkds" content="swedish, vikings, culture, history" />
     <meta name="author" content="Dikult105 group" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
+    <link rel="stylesheet" type="text/css" href="css/about_us.css" title="v1" />
     <title>
       About us
     </title>
@@ -76,9 +76,7 @@
             />
             <p>
               Contact email:
-              <a href="Christoffercontact@email.com"
-                >Christoffercontact@email.com</a
-              >
+              <a href="Christoffercontact@email.com">Christoffercontact@email.com</a>
             </p>
           </li>
         </ul>
