--- a/mainPage.html
+++ b/mainPage.html
@@ -32,7 +32,7 @@
     </header>
     <main>
       <h1><span id="h1Top">Vikings:</span> An Historical Review</h1>
-      <p id="intro_text">
+      <p id="main_text">
         Today we refer to Viking Age Scandinavians generally as Vikings as
         though they were one group. But the people known as Vikings weren’t an
         entirely homogeneous mass of people. There were Norwegian Vikings,
