--- a/swedish.html
+++ b/swedish.html
@@ -27,7 +27,7 @@
               <summary>&#9776; Countries</summary>
               <ul>
                 <li class="countries"><a href="norwegian.html">Norway</a></li>
-                <li class="countries"><a href="swedish.html">Sweeden</a></li>
+                <li class="countries"><a href="swedish.html">Sweden</a></li>
                 <li class="countries"><a href="danish.html">Denmark</a></li>
               </ul>
             </details>
@@ -63,7 +63,8 @@
         <ul>
           <li>
             <p class="historicalParagraph">
-              In this period Sweeden was parted into several tribes and their
+
+              In this period Sweden was parted into several tribes and their
               districts are still partly indicated by the present divisions of
               the country.
             </p>
