--- a/norwegian_old.html
+++ b/norwegian_old.html
@@ -21,7 +21,7 @@
               <summary>&#9776; Countries</summary>
               <ul>
                 <li class="countries"><a href="norwegian.html">Norway</a></li>
-                <li class="countries"><a href="swedish.html">Sweeden</a></li>
+                <li class="countries"><a href="swedish.html">Sweden</a></li>
                 <li class="countries"><a href="danish.html">Denmark</a></li>
               </ul>
             </details>
