--- a/about_us.html
+++ b/about_us.html
@@ -43,7 +43,7 @@
           <li>
             <img
               class="contactImage"
-              src="images/viking.jpg"
+              src="images/J.jpg"
               width="350px"
               height="300px"
               alt="first pic of us"
@@ -56,7 +56,7 @@
           <li>
             <img
               class="contactImage"
-              src="images/viking.jpg"
+              src="images/p.jpg"
               width="350px"
               height="300px"
               alt="second pic of us"
@@ -69,7 +69,7 @@
           <li>
             <img
               class="contactImage"
-              src="images/viking.jpg"
+              src="images/c.jpg"
               width="350px"
               height="300px"
               alt="third pic of us"
@@ -90,7 +90,7 @@
             placeholder="Write the message here"
             class="label_title"
           ></textarea>
-          <input type="button" value="Send" />
+          <input id="button" type="button" value="Send" />
         </form>
       </article>
     </main>
