added intro text about us

--- a/about_us.html
+++ b/about_us.html
@@ -39,6 +39,13 @@
     <main>
       <h1>About us</h1>
       <article>
+        <p id="intro_text">Hello, we are a diverse group of students of digital culture and
+        computer engineering as well as from different countries, Norway and
+        Spain. We are enthusiasts of the Viking culture and that is why we have
+        come to present you our website where you can find curious and
+        fascinating data as well as the sources from where they have been
+        extracted in case you want to investigate more in the Viking
+        culture.</p>
         <ul id="pics_email">
           <li>
             <img
