--- a/swedish.html
+++ b/swedish.html
@@ -72,9 +72,7 @@
             <h2>700 A.C</h2>
             <img
               src="images/scandinavian_map.jpg"
-              alt="first year image"
-              width="200px"
-              height="150px"
+              alt="700 A.C year image"
             />
           </li>
           <li>
@@ -89,9 +87,7 @@
             <h2>800 A.C</h2>
             <img
               src="images/viking_ship.jpg"
-              alt="Third year image"
-              width="200px"
-              height="150px"
+              alt="800 A.C year image"
             />
           </li>
           <li>
@@ -105,11 +101,9 @@
               </a>
             </p>
             <h2>900 A.C</h2>
-            <img
-              src="images/viking_trade_routes.jpg"
-              alt="Second year image"
-              width="200px"
-              height="150px"
+            <img id="special"
+              src="images/swedish_settle.png"
+              alt="900 A.C year image"
             />
           </li>
           <li>
@@ -123,9 +117,7 @@
             <h2>1000 A.C</h2>
             <img
               src="images/viking_market.jpg"
-              alt="Fourh year image"
-              width="200px"
-              height="150px"
+              alt="1000 A.C year image"
             />
           </li>
           <li>
@@ -139,9 +131,7 @@
             <h2>1130 A.C</h2>
             <img
               src="images/viking_king.jpg"
-              alt="Fith year image"
-              width="200px"
-              height="150px"
+              alt="1130 A.C year image"
             />
           </li>
           <li>
@@ -155,9 +145,7 @@
             <h2>1150 A.C</h2>
             <img
               src="images/sweedish_rune.jpg"
-              alt="Fith year image"
-              width="200px"
-              height="150px"
+              alt="1150 A.C year image"
             />
           </li>
         </ul>
