--- a/norwegian.html
+++ b/norwegian.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="robots" content="noarchive" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <header>
@@ -151,7 +152,7 @@
             <p class="historicalParagraph">Start of reign of King Olafr Tryggvasson of Norway, Norway adopts Christianity.</p>
             <h2>947</h2>
             <img
-              src="images/stolaf.jpg"
+              src="images/olaf.jpg"
               alt="picture of...."
               width="200px"
               height="150px"
