--- a/about_us.html
+++ b/about_us.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Dikult105 group" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/about_us.css" title="v1" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet">  
     <title>
       About us
     </title>
