--- a/mainPage.html
+++ b/mainPage.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
     <meta name="robots" content="noindex, nofollow" />
     <meta name="robots" content="noarchive" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet"> 
   </head>
   <body>
     <header>
